--- a/styles/main.scss
+++ b/styles/main.scss
@@ -204,6 +204,9 @@ aside {
   background-color: rgba(0, 0, 0, 0.7);
   padding: 70px 30px;
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   z-index: 1;
 }
 #addNewLinkButton {
@@ -319,4 +322,58 @@ section button {
       content: "Add";
     }
   }
+}
+label[for="dark-theme"] {
+  font-size: 21px;
+  margin-bottom: 30px;
+  padding: 8px 8px;
+  background: black;
+  border-radius: 10px;
+  border: 2px solid;
+  cursor: pointer;
+  border-color: white;
+  font-weight: bold;
+}
+#dark-theme:checked {
+  + header {
+    background-color: black;
+    .find-reference_input {
+      background-color: white;
+    }
+    h1 {
+      color: white;
+    }
+  }
+  ~ main {
+    div {
+      background-color: black;
+    }
+  }
+  ~ aside {
+    label[for="dark-theme"] {
+      color: black;
+      background: white;
+      border-color: black;
+    }
+  }
+  ~ section {
+    input,
+    textarea {
+      box-shadow: 0 0 0 300px inset #000;
+      border: 2px solid #99cea5;
+      -webkit-text-fill-color: #99cea5;
+      caret-color: #99cea5;
+      &:focus {
+        outline: 2px solid white;
+      }
+    }
+    #delete-link-button {
+      background-color: white;
+      color: black;
+    }
+  }
+}
+
+body:has(#dark-theme:checked) {
+  background-color: #252525;
 }
