--- a/styles/main.scss
+++ b/styles/main.scss
@@ -347,6 +347,7 @@ label[for="dark-theme"] {
   ~ main {
     div {
       background-color: black;
+      border: 2px solid white;
     }
   }
   ~ aside {
